# terrain-puzzle

./: .env.example  .gitignore  Cargo.toml  NOTICE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  playwright.config.ts  vite.desktop.config.ts
.github/workflows/: desktop-bundles.yml
app/: globals.css  layout.tsx  terrain-studio.tsx
apps/api/: Cargo.toml
apps/api/src/: cache.rs  elevation.rs  lib.rs  main.rs  surface.rs
assets/fonts/: OFL.txt  README.md
crates/terrain-core/: Cargo.toml
crates/terrain-core/src/: lib.rs
desktop/: index.html  main.tsx
docs/: color-output-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: rendered-html.test.mjs
tests/ui/: control-tabs.spec.ts
