[package]
name = "terrain-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "terrain_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
terrain-api = { path = "../apps/api" }
